update config to set billingSrv callable

--- a/BillingBundle/Resources/config/services.yaml
+++ b/BillingBundle/Resources/config/services.yaml
@@ -1,6 +1,7 @@
 services:
     Bluesquare\BillingBundle\Service\:
         resource: "../../Service/*"
+        public: true
         arguments:
             $container: "@service_container"
 
