--- a/BillingBundle/Resources/config/services.yaml
+++ b/BillingBundle/Resources/config/services.yaml
@@ -3,7 +3,8 @@ services:
         resource: "../../Service/*"
         public: true
         arguments:
-            $container: "@service_container"
+            $container: "@service_container",
+            $manager: "@doctrine.orm.entity_manager"
             $env: '%kernel.environment%'
 
     Bluesquare\BillingBundle\Controller\:
